--- a/css/Pearson_notes.css
+++ b/css/Pearson_notes.css
@@ -1,21 +1,21 @@
-/*Page Basics/layout*/
-/*body
-{
-padding: 5% 20% 10% 10.5% ;
-font-family: "Helvetica Neue", Helvetica, sans-serif;
-background: #f7f7f7;
+html {
+    margin: 25px
 }
-hr
-{
-border-color: #21578a;
-} */
-/*nav*/
+body {
+    padding: 5% 20% 10% 10.5%;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    background: #f7f7f7;
+}
+hr {
+    border-color: #21578a;
+}
+
 nav {
     height:auto;
-    position: fixed;
+    position:relative;
     top:0;
-    left:0;
-    right:0;
+    left: 10px;;
+    right: 10px;;
     background-color: #73000a;
     }
     nav > ul {top:0;
@@ -53,7 +53,7 @@ nav {
     border-bottom: 1px dashed #21578a
     }
     h5
-    { /*fix this */
+    { 
     font-variant: inherit;
     text-decoration: inherit;
     letter-spacing: 1px;
@@ -119,22 +119,19 @@ nav {
     td
     {border-bottom: dotted;
     border-bottom-width: 1px;}
-    /*Notes
-    .note
-    {
-    color:#73000a;
-    letter-spacing: normal;
+    .note {
+        color:#73000a;
+        letter-spacing: normal;
     }
     .footnote {
-    font-size: 0.75em;
-    font-weight: bold;
-    vertical-align: top;
-    }
+        font-size: 0.75em;
+        font-weight: bold;
+        vertical-align: top;
+        }
     .zThoughts {
-    font-style: oblique;
-    color: #21578a;
-    }
-    /*Citations*/
+        font-style: oblique;
+        color: #21578a;
+        }
     .citation
     {
     display: inline-block;
